package at.project.taxizentrale7bbif.domain;


public enum TaxiTyp {
    NICHTRAUCHER,
    BEHINDERTENTRANSPORT,
    GROSSRAUM,
    VIP
}
