@startuml

class Taxizentrale <<Entity>> {
name: String
telefonnummer: String
adresse: Adresse
kmPreis: BigDecimal
grundPreis: BigDecimal
'gesamtEinnahmen: decimal
}

class Auto <<Entity>> {
marke: Marke
baujahr: Integer
kmStand: Integer
einnahmen: Decimal
taxiTyp: TaxiTyp
serviceFaelligkeitsdatum: LocalDate
ps: Integer
}
class ZentraleAuto <<Entity>>{
zentrale: Taxizentrale
auto: Auto
}

class Mitarbeiter <<Entity>> {
vorname: String
nachname: String
geburtsdatum: LocalDate
telefonnummer: String
auto: Auto

}

class Adresse <<Value Object>> {
strassename: String
plz: Integer
bundesland: Bundesland
}

class Bundesland <<Entity>> {
name: String
}

enum TaxiTyp {
NICHT-RAUCHER
BEHINDERTENTRANSPORT
GROSSRAUM
VIP
}

class Modell <<Entity>>{
name: String
marke: Marke

}

class Marke <<Entity>>{
name: String
}

class Fahrt <<Entity>>{
'start: Adresse
ziel: Adresse
streckeInKm: Integer
kosten: BigDecimal
taxifahrer: Mitarbeiter
}





Auto -right- TaxiTyp
ZentraleAuto "1..n" -up-> "1" Auto
ZentraleAuto "1..n" --> "1" Taxizentrale
Auto "1..n" <-left- "1" Mitarbeiter
Taxizentrale "1"  *-- "1" Adresse
Adresse "1..n" <-- "1" Bundesland
Mitarbeiter "1"--> "0..n" Fahrt
Auto "1..n" <-- "1" Marke
Marke "1" --> "1..n" Modell
'Fahrt "1..n" <-- "1" Adresse
Fahrt "1..n" <-- "1" Adresse




@enduml